--- a/css/demo.css
+++ b/css/demo.css
@@ -19,7 +19,9 @@
   display:inline-block;
   width:320px;
   height:80px;
-  margin:5px;
+  float:left;
+  margin-top:-80px;
+  margin-left:5px;
   border-bottom:1px solid #ccc;
 }
 .commentsItem > img{
