--- a/css/demo.css
+++ b/css/demo.css
@@ -14,7 +14,7 @@
   bottom:0;
   margin:auto;
   box-shadow:0 0 10px #ccc;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 .commentsItem{
   display:inline-block;
